Fix flex position on mobile and desktop

--- a/order-summary-component-main/style.css
+++ b/order-summary-component-main/style.css
@@ -61,7 +61,7 @@ a:visited {
 }
 
 .card__box {
-  padding: 0 45px;
+  padding: 0 32px;
 }
 
 .card__img {
@@ -86,7 +86,8 @@ a:visited {
 }
 
 .card__price {
-  width: 280px;
+  width: 100%;
+  max-width: 280px;
   display: flex;
   /* gap: 20px; */
   justify-content: space-between;
@@ -186,6 +187,8 @@ a.price__change:active {
 @media screen and (min-width: 500px) {
   .container {
     background-image: url(./images/pattern-background-desktop.svg);
+    padding: 102px 0px;
+    align-items: flex-start;
   }
 
   .card {
@@ -207,8 +210,9 @@ a.price__change:active {
   }
 
   .card__price {
-    width: 354px;
+    max-width: 354px;
     padding: 25px 24px;
+    margin: 0 auto;
     margin-bottom: 32px;
   }
 
